--- a/client/app/page.module.css
+++ b/client/app/page.module.css
@@ -16,6 +16,6 @@ section.title {
 
 section.grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   gap: 1rem;
 }
